--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,9 +229,9 @@ span {
 #hero h1 {
   margin: 0 0 10px 0;
   font-size: 48px;
-  font-weight: 700;
+  font-weight: 450;
   line-height: 56px;
-  font-family: "Philosopher", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #71c55d;
 }
 
